--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 
 * {
-  font-size: arial,sans-serif,serif;
+  font-family: arial, sans-serif;
   padding: 0px;
   margin: 0px;
+}
+
+body {
+  position: relative;
 }
 
 .nav-top {
@@ -16,7 +20,7 @@
 
 .nav-top-left {
   float: left;
-  margin: 16px;
+  margin: 20px 30px;
   /* for debugging */
   /* border: 2px solid green;*/
 }
@@ -42,8 +46,9 @@
 }
 
 .nav-top-right {
-  margin: 16px;
+  margin: 20px 30px;
   float: right;
+	min-width: 70px;
   /* for debugging */
 /*  border: 1px solid red;*/
 }
@@ -86,3 +91,90 @@
   vertical-align: middle;
   text-align: center;
 }
+
+/********************************************/
+.google-icon {
+  display: inline-block;
+	position: absolute;
+	top: 196px;
+	left: 38%;
+}
+
+/*******************************************/
+.search-input {
+  position: absolute;
+	display: inline-block;
+	margin: 318px 28%;
+
+/*	border: 1px solid purple;*/
+}
+
+.search-input .search-formbox {
+  display: inline-block;
+  height: 100%;
+	width: 100%;
+	position: relative;
+	
+/*  border: 1px solid black;*/
+}
+
+.search-formbox input {
+  box-sizing: border-box;
+  font-size: 16px;
+  line-height: 2.5;
+	width: 100%;
+	padding-left: 16px;
+	padding-right: 10px;
+}
+
+.search-input .buttons {
+  position: relative;
+	top: 30px;
+	left: 102px;
+	letter-spacing: 0.2px;
+	display: inline-block;
+
+/*	border:1px solid red;*/
+}
+
+#search-submit-button,
+#have-fun-button {
+  font-size: 13px;
+	font-weight: bold;
+	line-height: 27px;
+	padding: 4px 16px;
+	margin: 0 2px;
+	color: #787878;
+	background: linear-gradient(to top, #f5f5f5, 50%, #f1f1f1);
+	border: 1px solid #f5f5f5;
+}
+/************************************************/
+
+#footer {
+	position: fixed;
+	background-color: #f2f2f2;
+	bottom: 0;
+	height: 35px;
+	width: 100%;
+	line-height: 40px;
+	font-size: 10px;
+	color: #222;
+}
+
+/*
+#footer .nav-footer {
+	position: absolute;
+	width: 100%;
+	background: linear-gradient(to top, #f5f5f5, 50%, #f1f1f1);
+}
+
+.nav-footer .nav-footer-left {
+ 
+}
+
+.nav-footer .nav-footer-left li {
+  display: inline-block;
+	position: absolute;
+	color: black;
+}
+*/
